[gd_scene load_steps=29 format=4 uid="uid://bh00ihldyked7"]

[ext_resource type="Script" uid="uid://d2irmiur4rsep" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://b7ebhqbriw2at" path="res://imagenes/Museum_room_3_layer_1.png" id="2_0xm2m"]
[ext_resource type="FontFile" uid="uid://dudo3khf2v3o4" path="res://VT323-Regular.ttf" id="2_074og"]
[ext_resource type="Texture2D" uid="uid://dnmg767hlosug" path="res://imagenes/animated_museum_laser_front.png" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://ya4yjrsha544" path="res://imagenes/animated_haunted_mirror_2.png" id="4_lquwl"]
[ext_resource type="Texture2D" uid="uid://bjwrmi6obrhqu" path="res://imagenes/animated_security_camera_left_.png" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://b3mw0xw6eim0a" path="res://imagenes/animated_treadmill.png" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://cbrskk22q2wth" path="res://letreroMision3.png" id="6_cegan"]
[ext_resource type="Texture2D" uid="uid://ctjbmwr0gakao" path="res://boton.png" id="7_074og"]
[ext_resource type="Texture2D" uid="uid://urbecc08ebvy" path="res://imagenes/idle_16x16_6.png" id="7_272bh"]
[ext_resource type="Texture2D" uid="uid://bvm0opt4st40p" path="res://imagenes/animated_museum_laser_horizontal.png" id="8_4c57u"]
[ext_resource type="Texture2D" uid="uid://dladn36p4av7u" path="res://imagenes/animated_security_camera_right.png" id="8_5vw27"]
[ext_resource type="Texture2D" uid="uid://hruqd4fse7q6" path="res://imagenes/animated_museum_laser_horizontal_modular.png" id="10_efxa6"]
[ext_resource type="AudioStream" uid="uid://dofojhtoohvub" path="res://musicaMision3.mp3" id="15_vivmo"]
[ext_resource type="Texture2D" uid="uid://j4ncx0mcm8xv" path="res://ayuda.png" id="18_82xsv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h2yge"]
texture = ExtResource("2_0xm2m")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mycd"]
texture = ExtResource("3_1bvp3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_272bh"]
texture = ExtResource("4_lquwl")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0

[sub_resource type="TileSet" id="TileSet_1bvp3"]
physics_layer_0/collision_layer = 3
sources/0 = SubResource("TileSetAtlasSource_h2yge")
sources/1 = SubResource("TileSetAtlasSource_7mycd")
sources/2 = SubResource("TileSetAtlasSource_272bh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5vw27"]
texture = ExtResource("5_lquwl")
0:0/animation_separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kek77"]
texture = ExtResource("6_7mycd")
1:0/0 = 0
4:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/animation_columns = 2
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4c57u"]
texture = ExtResource("7_272bh")
0:0/animation_columns = 4
0:0/animation_speed = 2.0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_lquwl"]
sources/1 = SubResource("TileSetAtlasSource_5vw27")
sources/2 = SubResource("TileSetAtlasSource_kek77")
sources/3 = SubResource("TileSetAtlasSource_4c57u")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ycdy4"]
texture = ExtResource("8_4c57u")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_efxa6"]
texture = ExtResource("5_lquwl")
0:0/animation_speed = 2.5
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/animation_frame_3/duration = 1.0
0:0/animation_frame_4/duration = 1.0
0:0/animation_frame_5/duration = 1.0
0:0/animation_frame_6/duration = 1.0
0:0/animation_frame_7/duration = 1.0
0:0/animation_frame_8/duration = 1.0
0:0/animation_frame_9/duration = 1.0
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dg77c"]
texture = ExtResource("8_5vw27")
0:0/animation_speed = 2.5
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/animation_frame_3/duration = 1.0
0:0/animation_frame_4/duration = 1.0
0:0/animation_frame_5/duration = 1.0
0:0/animation_frame_6/duration = 1.0
0:0/animation_frame_7/duration = 1.0
0:0/animation_frame_8/duration = 1.0
0:0/animation_frame_9/duration = 1.0
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w48qg"]
texture = ExtResource("10_efxa6")
1:0/animation_speed = 2.0
1:0/animation_frame_0/duration = 1.0
1:0/animation_frame_1/duration = 1.0
1:0/animation_frame_2/duration = 1.0
1:0/animation_frame_3/duration = 1.0
1:0/animation_frame_4/duration = 1.0
1:0/animation_frame_5/duration = 1.0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_dg77c"]
physics_layer_0/collision_layer = 1
sources/6 = SubResource("TileSetAtlasSource_efxa6")
sources/7 = SubResource("TileSetAtlasSource_dg77c")
sources/9 = SubResource("TileSetAtlasSource_w48qg")
sources/10 = SubResource("TileSetAtlasSource_ycdy4")

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="lbl_warning" type="Label" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 8.0
offset_right = 364.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 15
text = "Las redes están dañadas! Elige un algoritmo 
             para reconstruirlas."

[node name="VictoryLabel" type="Label" parent="CanvasLayer"]
offset_left = -39.0
offset_top = 210.0
offset_right = 482.0
offset_bottom = 245.0
theme_override_colors/font_color = Color(0.03238219, 0.03238219, 0.03238219, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 13
text = "                          Has seleccionado 3 aristas incorrectas. ¡Has perdido!"

[node name="BtnPrim" type="TextureButton" parent="CanvasLayer"]
offset_left = 197.0
offset_top = 60.0
offset_right = 393.0
offset_bottom = 157.0
texture_normal = ExtResource("7_074og")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelPrim" type="Label" parent="CanvasLayer/BtnPrim"]
layout_mode = 0
offset_left = 88.0
offset_top = 34.0
offset_right = 123.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 22
text = "PRIM

"

[node name="BtnKruskal" type="TextureButton" parent="CanvasLayer"]
offset_left = 51.0
offset_top = 63.0
offset_right = 257.0
offset_bottom = 153.0
texture_normal = ExtResource("7_074og")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelKruskal" type="Label" parent="CanvasLayer/BtnKruskal"]
layout_mode = 0
offset_left = 78.0
offset_top = 32.0
offset_right = 140.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 22
text = "KRUSKAL
"

[node name="btn_retry" type="TextureButton" parent="CanvasLayer"]
offset_left = 130.0
offset_top = 205.0
offset_right = 323.0
offset_bottom = 296.0
texture_normal = ExtResource("7_074og")
ignore_texture_size = true
stretch_mode = 0

[node name="LabelReintentar" type="Label" parent="CanvasLayer/btn_retry"]
layout_mode = 0
offset_left = 57.0
offset_top = 34.0
offset_right = 145.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 22
text = "REINTENTAR"

[node name="PanelAyuda" type="TextureRect" parent="CanvasLayer"]
offset_left = 42.0
offset_top = 35.0
offset_right = 409.0
offset_bottom = 233.0
texture = ExtResource("6_cegan")
expand_mode = 1

[node name="LabelExplicacion" type="Label" parent="CanvasLayer/PanelAyuda"]
layout_mode = 0
offset_left = 80.0
offset_top = 23.0
offset_right = 307.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0.016551724, 0.016551726, 0.016551724, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 13
text = "Instrucciones de reconstrucción
Kruskal: selecciona las conexiones
más baratas, sin formar ciclos.Tu 
meta es conectar todos los nodos
con el menor costo total.
Prim: comienza desde un nodo y expande la 
red agregando la conexión más barata
disponible desde los nodos ya conectados.

"

[node name="BotonContinuar" type="TextureButton" parent="CanvasLayer/PanelAyuda"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.9550002
anchor_top = -2.8460002
anchor_right = -3.9550002
anchor_bottom = -2.8460002
offset_left = 1660.4851
offset_top = 704.50806
offset_right = 1776.4851
offset_bottom = 756.50806
texture_normal = ExtResource("7_074og")

[node name="LabelContinuar" type="Label" parent="CanvasLayer/PanelAyuda"]
layout_mode = 0
offset_left = 246.0
offset_top = 158.0
offset_right = 311.0
offset_bottom = 181.0
theme_override_colors/font_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 14
text = "Continuar "

[node name="BotonAyuda" type="TextureButton" parent="CanvasLayer"]
offset_left = 389.0
offset_top = 7.0
offset_right = 422.0
offset_bottom = 40.0
texture_normal = ExtResource("18_82xsv")
ignore_texture_size = true
stretch_mode = 0

[node name="PanelCiber" type="TextureRect" parent="CanvasLayer"]
offset_left = 43.0
offset_top = 25.0
offset_right = 408.0
offset_bottom = 246.0
texture = ExtResource("6_cegan")
expand_mode = 1

[node name="ExplicaCiber" type="Label" parent="CanvasLayer/PanelCiber"]
layout_mode = 0
offset_left = 67.0
offset_top = 18.0
offset_right = 316.0
offset_bottom = 191.0
theme_override_colors/font_color = Color(0.016551724, 0.016551726, 0.016551724, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 11
text = "Tras contener al virus, la red quedó dañada: Varios enlaces fueron destruidos y algunos servidores quedaron aislados. En ciberseguridad, restaurar la infraestructura es esencial para garantizar que todos los sistemas vuelvan a comunicarse sin generar vulnerabilidades nuevas. Cada conexión tiene un costo diferente —ya sea por recursos, tiempo o riesgo— y reconstruirlas sin un plan podría dejar puntos débiles. Tu misión es restablecer la red de la forma más eficiente posible  minimizando gastos."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BotonContinuar2" type="TextureButton" parent="CanvasLayer/PanelCiber"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.9550002
anchor_top = -2.8460002
anchor_right = -3.9550002
anchor_bottom = -2.8460002
offset_left = 1647.5751
offset_top = 791.96606
offset_right = 1763.5751
offset_bottom = 843.96606
texture_normal = ExtResource("7_074og")

[node name="LabelContinuar2" type="Label" parent="CanvasLayer/PanelCiber"]
layout_mode = 0
offset_left = 240.0
offset_top = 180.0
offset_right = 305.0
offset_bottom = 203.0
theme_override_colors/font_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_fonts/font = ExtResource("2_074og")
theme_override_font_sizes/font_size = 14
text = "Continuar "

[node name="decoración" type="Node2D" parent="."]

[node name="fondo" type="TileMapLayer" parent="decoración"]

[node name="piso" type="TileMapLayer" parent="decoración"]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAcAAAAAAAEAAAAIAAYAAAAAAAIAAAAIAAYAAAAAAAMAAAACAAoAAAAAAAQAAAACAAsAAAAAAAUAAAACAAcAAAAAAAYAAAACAAgAAAAAAAcAAAACAAkAAAABAAAAAAABAAkAAAABAAEAAAABAAkAAAABAAIAAAABAAoAAAABAAMAAAABAAoAAAABAAQAAAABAAsAAAABAAUAAAABAAwAAAABAAYAAAABAA0AAAABAAcAAAABAA4AAAACAAAAAAAEAAgAAAACAAEAAAAEAAkAAAACAAIAAAAEAAkAAAACAAMAAAAEAAoAAAACAAQAAAAEAAsAAAACAAUAAAAEAAcAAAACAAYAAAAEAAgAAAACAAcAAAAEAAkAAAADAAAAAAAFAAgAAAADAAEAAAAFAAkAAAADAAIAAAAFAAkAAAADAAMAAAAFAAoAAAADAAQAAAAFAAsAAAADAAUAAAAFAAcAAAADAAYAAAAFAAgAAAADAAcAAAAFAAkAAAAEAAAAAAAGAAgAAAAEAAEAAAAGAAkAAAAEAAIAAAAGAAkAAAAEAAMAAAAGAAoAAAAEAAQAAAAGAAsAAAAEAAUAAAAGAAcAAAAEAAYAAAAGAAgAAAAEAAcAAAAGAAkAAAAFAAAAAAAEAAgAAAAFAAEAAAAEAAkAAAAFAAIAAAAEAAkAAAAFAAMAAAAEAAoAAAAFAAQAAAAHAAsAAAAFAAUAAAAHAAcAAAAFAAYAAAAHAAgAAAAFAAcAAAAHAAkAAAAGAAAAAAAFAAgAAAAGAAEAAAAFAAkAAAAGAAIAAAAFAAkAAAAGAAMAAAAFAAoAAAAGAAQAAAAIAAsAAAAGAAUAAAAIAAcAAAAGAAYAAAAIAAgAAAAGAAcAAAAIAAkAAAAHAAAAAAAGAAgAAAAHAAEAAAAGAAkAAAAHAAIAAAAGAAkAAAAHAAMAAAAGAAoAAAAHAAQAAAAJAAsAAAAHAAUAAAAJAAcAAAAHAAYAAAAJAAgAAAAHAAcAAAAJAAkAAAAIAAAAAAAEAAgAAAAIAAEAAAAEAAkAAAAIAAIAAAAGAAkAAAAIAAMAAAAGAAoAAAAIAAQAAAAKAAsAAAAIAAUAAAAKAAcAAAAIAAYAAAAKAAgAAAAIAAcAAAAKAAkAAAAJAAAAAAAFAAgAAAAJAAEAAAAFAAkAAAAJAAIAAAAEAAkAAAAJAAMAAAAEAAoAAAAJAAQAAAALAAsAAAAJAAUAAAALAAcAAAAJAAYAAAALAAgAAAAJAAcAAAALAAkAAAAKAAAAAAAGAAgAAAAKAAEAAAAGAAkAAAAKAAIAAAAFAAkAAAAKAAMAAAAFAAoAAAAKAAQAAAAMAAsAAAAKAAUAAAAMAAcAAAAKAAYAAAAMAAgAAAAKAAcAAAAMAAkAAAALAAAAAAAEAAgAAAALAAEAAAAEAAkAAAALAAIAAAAGAAkAAAALAAMAAAAGAAoAAAALAAQAAAANAAsAAAALAAUAAAANAAcAAAALAAYAAAANAAgAAAALAAcAAAANAAkAAAAMAAAAAAAFAAgAAAAMAAEAAAAFAAkAAAAMAAIAAAAFAAkAAAAMAAMAAAAFAAoAAAAMAAQAAAAOAAsAAAAMAAUAAAAOAAcAAAAMAAYAAAAOAAgAAAAMAAcAAAAOAAkAAAANAAAAAAAGAAgAAAANAAEAAAAGAAkAAAANAAIAAAAGAAkAAAANAAMAAAAGAAoAAAANAAQAAAACAAsAAAANAAUAAAACAAcAAAANAAYAAAACAAgAAAANAAcAAAACAAkAAAAOAAAAAAAEAAgAAAAOAAEAAAAEAAkAAAAOAAIAAAAFAAkAAAAOAAMAAAAFAAoAAAAOAAQAAAADAAsAAAAOAAUAAAADAAcAAAAOAAYAAAADAAgAAAAOAAcAAAADAAkAAAAPAAAAAAAFAAgAAAAPAAEAAAAFAAkAAAAPAAIAAAAGAAkAAAAPAAMAAAAGAAoAAAAPAAQAAAAEAAsAAAAPAAUAAAAEAAcAAAAPAAYAAAAEAAgAAAAPAAcAAAAEAAkAAAAQAAAAAAAGAAgAAAAQAAEAAAAGAAkAAAAQAAIAAAAEAAkAAAAQAAMAAAAEAAoAAAAQAAQAAAAFAAsAAAAQAAUAAAAFAAcAAAAQAAYAAAAFAAgAAAAQAAcAAAAFAAkAAAARAAAAAAAEAAgAAAARAAEAAAAEAAkAAAARAAIAAAAFAAkAAAARAAMAAAAFAAoAAAARAAQAAAACAAsAAAARAAUAAAACAAwAAAARAAYAAAACAA0AAAARAAcAAAAFAAgAAAASAAAAAAAFAAgAAAASAAEAAAAFAAkAAAASAAIAAAAGAAkAAAASAAMAAAAGAAoAAAASAAQAAAADAAsAAAASAAUAAAADAAwAAAASAAYAAAADAA0AAAASAAcAAAAFAAgAAAATAAAAAAAGAAgAAAATAAEAAAAGAAkAAAATAAIAAAAFAAkAAAATAAMAAAAFAAoAAAATAAQAAAAEAAsAAAATAAUAAAAEAAwAAAATAAYAAAAEAA0AAAATAAcAAAAFAAgAAAAUAAAAAAAEAAgAAAAUAAEAAAAEAAkAAAAUAAIAAAAEAAkAAAAUAAMAAAAEAAoAAAAUAAQAAAAFAAsAAAAUAAUAAAAFAAwAAAAUAAYAAAAFAA0AAAAUAAcAAAAFAAgAAAAVAAAAAAAFAAgAAAAVAAEAAAAFAAkAAAAVAAIAAAAFAAkAAAAVAAMAAAAFAAoAAAAVAAQAAAAGAAsAAAAVAAUAAAAGAAwAAAAVAAYAAAAGAA0AAAAVAAcAAAAFAAgAAAAWAAAAAAAGAAgAAAAWAAEAAAAGAAkAAAAWAAIAAAAGAAkAAAAWAAMAAAAGAAoAAAAWAAQAAAAHAAsAAAAWAAUAAAAHAAwAAAAWAAYAAAAHAA0AAAAWAAcAAAAFAAgAAAAXAAAAAAAEAAgAAAAXAAEAAAAEAAkAAAAXAAIAAAAFAAkAAAAXAAMAAAAFAAoAAAAXAAQAAAAIAAsAAAAXAAUAAAAIAAwAAAAXAAYAAAAIAA0AAAAXAAcAAAAFAAgAAAAYAAAAAAAFAAgAAAAYAAEAAAAFAAkAAAAYAAIAAAAGAAkAAAAYAAMAAAAGAAoAAAAYAAQAAAAJAAsAAAAYAAUAAAAJAAwAAAAYAAYAAAAJAA0AAAAYAAcAAAAFAAgAAAAZAAAAAAAEAAgAAAAZAAEAAAAEAAkAAAAZAAIAAAAEAAkAAAAZAAMAAAAEAAoAAAAZAAQAAAAKAAsAAAAZAAUAAAAKAAwAAAAZAAYAAAAKAA0AAAAZAAcAAAAFAAgAAAARAAkAAAACAAsAAAARAAoAAAACAAwAAAARAAsAAAACAA0AAAARAAwAAAACAA4AAAARAA0AAAAOAAsAAAARAA4AAAAOAAwAAAARAA8AAAAOAA0AAAARABAAAAAOAA4AAAASAAkAAAADAAsAAAASAAoAAAADAAwAAAASAAsAAAADAA0AAAASAAwAAAADAA4AAAASAA0AAAADAAsAAAASAA4AAAADAAwAAAASAA8AAAADAA0AAAASABAAAAADAA4AAAATAAkAAAAEAAsAAAATAAoAAAAEAAwAAAATAAsAAAAEAA0AAAATAAwAAAAEAA4AAAATAA0AAAAEAAsAAAATAA4AAAAEAAwAAAATAA8AAAAEAA0AAAATABAAAAAEAA4AAAAUAAkAAAAFAAsAAAAUAAoAAAAFAAwAAAAUAAsAAAAFAA0AAAAUAAwAAAAFAA4AAAAUAA0AAAAFAAsAAAAUAA4AAAAFAAwAAAAUAA8AAAAFAA0AAAAUABAAAAAFAA4AAAAVAAkAAAAGAAsAAAAVAAoAAAAGAAwAAAAVAAsAAAAGAA0AAAAVAAwAAAAGAA4AAAAVAA0AAAAGAAsAAAAVAA4AAAAGAAwAAAAVAA8AAAAGAA0AAAAVABAAAAAGAA4AAAAWAAkAAAAHAAsAAAAWAAoAAAAHAAwAAAAWAAsAAAAHAA0AAAAWAAwAAAAHAA4AAAAWAA0AAAAHAAsAAAAWAA4AAAAHAAwAAAAWAA8AAAAHAA0AAAAWABAAAAAHAA4AAAAXAAkAAAAIAAsAAAAXAAoAAAAIAAwAAAAXAAsAAAAIAA0AAAAXAAwAAAAIAA4AAAAXAA0AAAAIAAsAAAAXAA4AAAAIAAwAAAAXAA8AAAAIAA0AAAAXABAAAAAIAA4AAAAYAAkAAAAJAAsAAAAYAAoAAAAJAAwAAAAYAAsAAAAJAA0AAAAYAAwAAAAJAA4AAAAYAA0AAAAJAAsAAAAYAA4AAAAJAAwAAAAYAA8AAAAJAA0AAAAYABAAAAAJAA4AAAAZAAkAAAAKAAsAAAAZAAoAAAAKAAwAAAAZAAsAAAAKAA0AAAAZAAwAAAAKAA4AAAAZAA0AAAAKAAsAAAAZAA4AAAAKAAwAAAAZAA8AAAAKAA0AAAAZABAAAAAKAA4AAAAaAAkAAAALAAsAAAAaAAoAAAALAAwAAAAaAAsAAAALAA0AAAAaAAwAAAALAA4AAAAaAA0AAAALAAsAAAAaAA4AAAALAAwAAAAaAA8AAAALAA0AAAAaABAAAAALAA4AAAAbAAkAAAAMAAsAAAAbAAoAAAAMAAwAAAAbAAsAAAAMAA0AAAAbAAwAAAAMAA4AAAAbAA0AAAAMAAsAAAAbAA4AAAAMAAwAAAAbAA8AAAAMAA0AAAAbABAAAAAMAA4AAAAcAAkAAAAPAAkAAAAcAAoAAAAPAAoAAAAcAAsAAAAPAAsAAAAcAAwAAAAPAAwAAAAcAA0AAAAPAA0AAAAcAA4AAAAPAA4AAAAcAA8AAAAPAA8AAAAcABAAAAAPABAAAAAdAAkAAAAOAAsAAAAdAAoAAAAOAAwAAAAdAAsAAAAOAA0AAAAdAAwAAAAOAA4AAAAdAA0AAAAOAAsAAAAdAA4AAAAOAAwAAAAdAA8AAAAQAA8AAAAdABAAAAAQABAAAAAAAAkAAAACAAsAAAAAAAoAAAACAAwAAAAAAAsAAAACAA0AAAAAAAwAAAACAA4AAAAAAA0AAAACAAsAAAAAAA4AAAACAAwAAAAAAA8AAAACAA0AAAAAABAAAAAAAA8AAAABAAkAAAABAAgAAAABAAoAAAABAAkAAAABAAsAAAABAAoAAAABAAwAAAABAAsAAAABAA0AAAABAAwAAAABAA4AAAABAA0AAAABAA8AAAABAA4AAAABABAAAAABAA8AAAACAAkAAAAEAAsAAAACAAoAAAAEAAwAAAACAAsAAAAEAA0AAAACAAwAAAAEAA4AAAACAA0AAAAEAAsAAAACAA4AAAAEAAwAAAACAA8AAAAEAA0AAAACABAAAAAEAA4AAAADAAkAAAAFAAsAAAADAAoAAAAFAAwAAAADAAsAAAAFAA0AAAADAAwAAAAFAA4AAAADAA0AAAAFAAsAAAADAA4AAAAFAAwAAAADAA8AAAAFAA0AAAADABAAAAAFAA4AAAAEAAkAAAAGAAsAAAAEAAoAAAAGAAwAAAAEAAsAAAAGAA0AAAAEAAwAAAAGAA4AAAAEAA0AAAAGAAsAAAAEAA4AAAAGAAwAAAAEAA8AAAAGAA0AAAAEABAAAAAGAA4AAAAFAAkAAAAHAAsAAAAFAAoAAAAHAAwAAAAFAAsAAAAHAA0AAAAFAAwAAAAHAA4AAAAFAA0AAAACAAsAAAAFAA4AAAACAAwAAAAFAA8AAAACAA0AAAAFABAAAAACAA4AAAAGAAkAAAAIAAsAAAAGAAoAAAAIAAwAAAAGAAsAAAAIAA0AAAAGAAwAAAAIAA4AAAAGAA0AAAADAAsAAAAGAA4AAAADAAwAAAAGAA8AAAADAA0AAAAGABAAAAADAA4AAAAHAAkAAAAJAAsAAAAHAAoAAAAJAAwAAAAHAAsAAAAJAA0AAAAHAAwAAAAJAA4AAAAHAA0AAAAEAAsAAAAHAA4AAAAEAAwAAAAHAA8AAAAEAA0AAAAHABAAAAAEAA4AAAAIAAkAAAAKAAsAAAAIAAoAAAAKAAwAAAAIAAsAAAAKAA0AAAAIAAwAAAAKAA4AAAAIAA0AAAAFAAsAAAAIAA4AAAAFAAwAAAAIAA8AAAAFAA0AAAAIABAAAAAFAA4AAAAJAAkAAAALAAsAAAAJAAoAAAALAAwAAAAJAAsAAAALAA0AAAAJAAwAAAALAA4AAAAJAA0AAAAGAAsAAAAJAA4AAAAGAAwAAAAJAA8AAAAGAA0AAAAJABAAAAAGAA4AAAAKAAkAAAAMAAsAAAAKAAoAAAAMAAwAAAAKAAsAAAAMAA0AAAAKAAwAAAAMAA4AAAAKAA0AAAAHAAsAAAAKAA4AAAAHAAwAAAAKAA8AAAAHAA0AAAAKABAAAAAHAA4AAAALAAkAAAANAAsAAAALAAoAAAANAAwAAAALAAsAAAANAA0AAAALAAwAAAANAA4AAAALAA0AAAAIAAsAAAALAA4AAAAIAAwAAAALAA8AAAAIAA0AAAALABAAAAAIAA4AAAAMAAkAAAAOAAsAAAAMAAoAAAAOAAwAAAAMAAsAAAAOAA0AAAAMAAwAAAAOAA4AAAAMAA0AAAAJAAsAAAAMAA4AAAAJAAwAAAAMAA8AAAAJAA0AAAAMABAAAAAJAA4AAAANAAkAAAACAAsAAAANAAoAAAACAAwAAAANAAsAAAACAA0AAAANAAwAAAACAA4AAAANAA0AAAAKAAsAAAANAA4AAAAKAAwAAAANAA8AAAAKAA0AAAANABAAAAAKAA4AAAAOAAkAAAADAAsAAAAOAAoAAAADAAwAAAAOAAsAAAADAA0AAAAOAAwAAAADAA4AAAAOAA0AAAALAAsAAAAOAA4AAAALAAwAAAAOAA8AAAALAA0AAAAOABAAAAALAA4AAAAPAAkAAAAEAAsAAAAPAAoAAAAEAAwAAAAPAAsAAAAEAA0AAAAPAAwAAAAEAA4AAAAPAA0AAAAMAAsAAAAPAA4AAAAMAAwAAAAPAA8AAAAMAA0AAAAPABAAAAAMAA4AAAAQAAkAAAAFAAsAAAAQAAoAAAAFAAwAAAAQAAsAAAAFAA0AAAAQAAwAAAAFAA4AAAAQAA0AAAANAAsAAAAQAA4AAAANAAwAAAAQAA8AAAANAA0AAAAQABAAAAANAA4AAAAAAAgAAAACAAoAAAABAAgAAAABAAcAAAACAAgAAAAEAAoAAAADAAgAAAAFAAoAAAAEAAgAAAAGAAoAAAAFAAgAAAAHAAoAAAAGAAgAAAAIAAoAAAAHAAgAAAAJAAoAAAAIAAgAAAAKAAoAAAAJAAgAAAALAAoAAAAKAAgAAAAMAAoAAAALAAgAAAANAAoAAAAMAAgAAAAOAAoAAAANAAgAAAACAAoAAAAOAAgAAAADAAoAAAAPAAgAAAAEAAoAAAAQAAgAAAAFAAoAAAARAAgAAAACAAoAAAASAAgAAAADAAoAAAATAAgAAAAEAAoAAAAUAAgAAAAFAAoAAAAVAAgAAAAGAAoAAAAWAAgAAAAHAAoAAAAXAAgAAAAIAAoAAAAYAAgAAAAJAAoAAAAZAAgAAAAKAAoAAAAaAAUAAAALAAwAAAAaAAYAAAALAA0AAAAaAAcAAAAFAAgAAAAaAAgAAAALAAoAAAAbAAUAAAAMAAwAAAAbAAYAAAAMAA0AAAAbAAcAAAAFAAgAAAAbAAgAAAAMAAoAAAAcAAUAAAAPAAoAAAAcAAYAAAAPAAsAAAAcAAcAAAAPAAwAAAAcAAgAAAAPAAgAAAAdAAUAAAAOAAwAAAAdAAYAAAAOAA0AAAAdAAcAAAAFAAgAAAAdAAgAAAAOAAoAAAAaAAAAAAAFAAgAAAAaAAEAAAAFAAkAAAAaAAIAAAAFAAkAAAAaAAMAAAAFAAoAAAAaAAQAAAALAAsAAAAbAAAAAAAGAAgAAAAbAAEAAAAGAAkAAAAbAAIAAAAGAAkAAAAbAAMAAAAGAAoAAAAbAAQAAAAMAAsAAAAcAAAAAAAPAAcAAAAcAAEAAAAPAAgAAAAcAAIAAAAPAAkAAAAcAAMAAAAPAAsAAAAcAAQAAAAPAAwAAAAdAAAAAAAOAAcAAAAdAAEAAAAOAAgAAAAdAAIAAAAOAAkAAAAdAAMAAAAOAAoAAAAdAAQAAAAOAAsAAAA=")
tile_set = SubResource("TileSet_1bvp3")

[node name="camaras" type="TileMapLayer" parent="decoración"]
tile_map_data = PackedByteArray("AAAbAAwAAwACAAAAAAAbAA0AAwACAAEAAAAbAAUAAwACAAAAAAAbAAYAAwACAAEAAAAbAAIAAwACAAEAAAACAAEAAwACAAAAABACAAIAAwACAAEAABACAAUAAwACAAAAABACAAYAAwACAAEAABACAAwAAwACAAAAABACAA0AAwACAAEAABAbAAEAAwACAAAAAAAEAAUAAgAAAAEAAAAEAAYAAgAAAAIAAAAEAAcAAgAAAAMAAAAFAAUAAgABAAEAAAAFAAYAAgABAAIAAAAFAAcAAgABAAMAAAAGAAUAAgACAAEAAAAGAAYAAgACAAIAAAAGAAcAAgACAAMAAAAXAAUAAgAAAAEAAAAXAAYAAgAAAAIAAAAXAAcAAgAAAAMAAAAYAAUAAgABAAEAAAAYAAYAAgABAAIAAAAYAAcAAgABAAMAAAAZAAUAAgACAAEAAAAZAAYAAgACAAIAAAAZAAcAAgACAAMAAAAXAA4AAgAAAAEAAAAXAA8AAgAAAAIAAAAXABAAAgAAAAMAAAAYAA4AAgABAAEAAAAYAA8AAgABAAIAAAAYABAAAgABAAMAAAAZAA4AAgACAAEAAAAZAA8AAgACAAIAAAAZABAAAgACAAMAAAAEAA4AAgAAAAEAAAAEAA8AAgAAAAIAAAAEABAAAgAAAAMAAAAFAA4AAgABAAEAAAAFAA8AAgABAAIAAAAFABAAAgABAAMAAAAGAA4AAgACAAEAAAAGAA8AAgACAAIAAAAGABAAAgACAAMAAAA=")
tile_set = SubResource("TileSet_lquwl")

[node name="lasers" type="TileMapLayer" parent="decoración"]
tile_map_data = PackedByteArray("AAACAAoABgAAAAAAAAACAAQABgAAAAAAAAACAAAABgAAAAAAAAACAA4ABgAAAAAAAAAbAA4ABwAAAAAAAAAbAAoABwAAAAAAAAAbAAQABwAAAAAAAAAbAAAABwAAAAAAAAACAAMACgAJAAAAABADAAMACQABAAAAAAAEAAMACQABAAAAAAAFAAMACQABAAAAAAAGAAMACQABAAAAAAAHAAMACQABAAAAAAAIAAMACQABAAAAAAAJAAMACQABAAAAAAAKAAMACQABAAAAAAALAAMACQABAAAAAAAMAAMACQABAAAAAAANAAMACQABAAAAAAAOAAMACQABAAAAAAAPAAMACQABAAAAAAAQAAMACQABAAAAAAARAAMACQABAAAAAAASAAMACQABAAAAAAATAAMACQABAAAAAAAUAAMACQABAAAAAAAVAAMACQABAAAAAAAWAAMACQABAAAAAAAXAAMACQABAAAAAAAYAAMACQABAAAAAAAZAAMACQABAAAAAAAaAAMACQABAAAAAAAbAAMACgALAAAAAAACABAACgAFAAAAABADABAACQABAAAAAAAEABAACQABAAAAAAAFABAACQABAAAAAAAGABAACQABAAAAAAAHABAACQABAAAAAAAIABAACQABAAAAAAAJABAACQABAAAAAAAKABAACQABAAAAAAALABAACQABAAAAAAAMABAACQABAAAAAAANABAACQABAAAAAAAOABAACQABAAAAAAAPABAACQABAAAAAAAQABAACQABAAAAAAARABAACQABAAAAAAASABAACQABAAAAAAATABAACQABAAAAAAAUABAACQABAAAAAAAVABAACQABAAAAAAAWABAACQABAAAAAAAXABAACQABAAAAAAAYABAACQABAAAAAAAZABAACQABAAAAAAAaABAACQABAAAAAAAbABAACgAFAAAAAAACAAwACgAFAAAAABADAAwACQABAAAAAAAEAAwACQABAAAAAAAFAAwACQABAAAAAAAGAAwACQABAAAAAAAHAAwACQABAAAAAAAIAAwACQABAAAAAAAJAAwACQABAAAAAAAKAAwACQABAAAAAAALAAwACQABAAAAAAAMAAwACQABAAAAAAANAAwACQABAAAAAAAOAAwACQABAAAAAAAPAAwACQABAAAAAAAQAAwACQABAAAAAAARAAwACQABAAAAAAASAAwACQABAAAAAAATAAwACQABAAAAAAAUAAwACQABAAAAAAAVAAwACQABAAAAAAAWAAwACQABAAAAAAAXAAwACQABAAAAAAAYAAwACQABAAAAAAAZAAwACQABAAAAAAAaAAwACQABAAAAAAAbAAwACgAFAAAAAAACAAgACgAFAAAAABADAAgACQABAAAAAAAEAAgACQABAAAAAAAFAAgACQABAAAAAAAGAAgACQABAAAAAAAHAAgACQABAAAAAAAIAAgACQABAAAAAAAJAAgACQABAAAAAAAKAAgACQABAAAAAAALAAgACQABAAAAAAAMAAgACQABAAAAAAANAAgACQABAAAAAAAOAAgACQABAAAAAAAPAAgACQABAAAAAAAQAAgACQABAAAAAAARAAgACQABAAAAAAASAAgACQABAAAAAAATAAgACQABAAAAAAAUAAgACQABAAAAAAAVAAgACQABAAAAAAAWAAgACQABAAAAAAAXAAgACQABAAAAAAAYAAgACQABAAAAAAAZAAgACQABAAAAAAAaAAgACQABAAAAAAAbAAgACgAFAAAAAAA=")
tile_set = SubResource("TileSet_dg77c")

[node name="musicaMision3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_vivmo")
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/BotonAyuda" to="." method="_on_boton_ayuda_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelCiber/BotonContinuar2" to="." method="_on_boton_continuar_2_pressed"]
